<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="book_added_text">Book Added!</string>
    <string name="share_text">A must read book: </string>

    <!-- Book information  -->
    <string name="author_text">Author(s): %1$s</string>
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="desc_isbn_input">ISBN Content Box</string>
    <string name="list_of_books_empty_text">No books found.</string>
    <string name="book_search_failure_text">Book search failed. Is your device connected to the internet?</string>
    <string name="author_not_found">Author Not Found.</string>
    <string name="unknown_subtitle">Unknown Subtitle</string>
    <string name="no_desc_available">No description available.</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="no_categories_found">No categories found.</string>
</resources>
